data/collection/fixes/descriptions/scala/scala-8299
```scala
object Test extends App {
  class C

  implicit class CompatibleC(c: C) {
    def foo(x: Int) = ???
  }

  val c: C = ???
  println(c.foo _)
}
```

```scala
15:44 ~/Projects/Master/sandbox (master)$ s
Test.scala:9: error: missing arguments for method foo in class CompatibleC;
follow this method with `_' if you want to treat it as a partially applied function
  println(c.foo _)
            ^
one error found
```

The error is the same if I manually create an implicit def.